front-end get request finished

--- a/src/WebApp/src/app/modules/pages/courier-page/courier-page.component.html
+++ b/src/WebApp/src/app/modules/pages/courier-page/courier-page.component.html
@@ -2,5 +2,5 @@
 <p class="lead">
     Clientes registrados y habilitados para realizar pedidos
 </p>
-<app-courier></app-courier>
+<app-couriers></app-couriers>
 
