--- a/src/WebApp/src/app/modules/pages/customer-page/customer-page.component.html
+++ b/src/WebApp/src/app/modules/pages/customer-page/customer-page.component.html
@@ -2,4 +2,4 @@
 <p class="lead">
     Repartidores que dispone la empresa para la entrega de pedidos
   </p>
-<app-customer></app-customer>
+<app-customers></app-customers>
