--- a/src/WebApp/src/app/core/header/header.component.html
+++ b/src/WebApp/src/app/core/header/header.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">
+    <a class="navbar-brand"   routerlink="/">
         <img src="/assets/images/pulpito.png" width="30" height="30" alt="">
         Empresa Pulpito</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
