add customer and courier

--- a/src/WebApp/src/app/core/header/header.component.html
+++ b/src/WebApp/src/app/core/header/header.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand"   routerlink="/">
+    <a class="navbar-brand"   routerLink="/">
         <img src="/assets/images/pulpito.png" width="30" height="30" alt="">
         Empresa Pulpito</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -14,7 +14,7 @@
           <a class="nav-link" routerLink="/couriers">Repartidores</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Administrador de Pedidos</a>
+          <a class="nav-link" routerLink="/">Administrador de Pedidos</a>
         </li>
       </ul>
     </div>
