--- a/src/WebApp/src/app/modules/pages/courier-page/courier-page.component.html
+++ b/src/WebApp/src/app/modules/pages/courier-page/courier-page.component.html
@@ -4,3 +4,11 @@
 </p>
 <app-couriers></app-couriers>
 
+<button type="button" class="btn btn-secondary" data-toggle="modal" data-target="#exampleModal" routerLink="/couriers/new-courier">
+    Agregar Repartidor
+</button>
+
+
+
+
+
