--- a/src/WebApp/src/app/modules/pages/customer-page/customer-page.component.html
+++ b/src/WebApp/src/app/modules/pages/customer-page/customer-page.component.html
@@ -3,3 +3,6 @@
     Repartidores que dispone la empresa para la entrega de pedidos
   </p>
 <app-customers></app-customers>
+<button type="button" class="btn btn-secondary" data-toggle="modal" data-target="#exampleModal" routerLink="/customers/new-customer">
+  Agregar Cliente
+</button>
