Adding files, compatibility and som corrections

--- a/src/WebApp/src/app/core/header/header.component.html
+++ b/src/WebApp/src/app/core/header/header.component.html
@@ -1,20 +1,20 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand"   routerLink="/">
-        <img src="/assets/images/pulpito.png" width="30" height="30" alt="">
-        Empresa Pulpito</a>
+        <img src="/assets/images/business-icon.jpg" width="30" height="30" alt="">
+        Express</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
-        <li class="nav-item active">
-          <a class="nav-link" routerLink="/">Clientes <span class="sr-only">(current)</span></a>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/clientes">Clientes <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/couriers">Repartidores</a>
+          <a class="nav-link" routerLink="/repartidores">Repartidores</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/">Administrador de Pedidos</a>
+          <a class="nav-link" routerLink="/administrar_pedidos">Administrar de Pedidos</a>
         </li>
       </ul>
     </div>
