--- a/src/WebApp/src/app/modules/pages/courier-page/courier-page.component.html
+++ b/src/WebApp/src/app/modules/pages/courier-page/courier-page.component.html
@@ -1,10 +1,10 @@
 <h1 class="display-4">Repartidores</h1>
 <p class="lead">
-    Clientes registrados y habilitados para realizar pedidos
+    Repartidores que dispone la empresa para la entrega de pedidos
 </p>
 <app-couriers></app-couriers>
 
-<button type="button" class="btn btn-secondary" data-toggle="modal" data-target="#exampleModal" routerLink="/couriers/new-courier">
+<button type="button" class="btn btn-secondary" routerLink="/repartidores/agregar">
     Agregar Repartidor
 </button>
 
