--- a/src/WebApp/src/app/modules/pages/customer-page/customer-page.component.html
+++ b/src/WebApp/src/app/modules/pages/customer-page/customer-page.component.html
@@ -1,8 +1,8 @@
 <h1 class="display-4">Clientes</h1>
 <p class="lead">
-    Repartidores que dispone la empresa para la entrega de pedidos
+  Clientes registrados y habilitados para realizar pedidos
   </p>
 <app-customers></app-customers>
-<button type="button" class="btn btn-secondary" data-toggle="modal" data-target="#exampleModal" routerLink="/customers/new-customer">
+<button type="button" class="btn btn-secondary" routerLink="/clientes/agregar">
   Agregar Cliente
 </button>
