--- a/src/WebApp/src/app/modules/components/customers/customers.component.html
+++ b/src/WebApp/src/app/modules/components/customers/customers.component.html
@@ -1,13 +1,21 @@
 <table class="table table-dark">
     <thead>
       <tr>
+        <th scope="col">#</th> 
         <th scope="col">Nombre</th>
         <th scope="col">Apellido</th>
-        <th scope="col">Direccion</th>
+        <th scope="col">Correo Electronico</th>
         <th scope="col">C.I.</th>
       </tr>
     </thead>
     <tbody>
-        <app-customer-item *ngFor="let customer of customers" [customer]="customer"></app-customer-item> 
+      <tr *ngFor="let customer of customers; index as i">
+        <td>{{i+1}}</td>
+        <td>{{customer.firstName}}</td>
+        <td>{{customer.lastName}}</td>
+        <td>{{customer.email}}</td>
+        <td>{{customer.ci}}</td>
+
+      </tr>
     </tbody>
   </table>
