--- a/src/WebApp/src/app/modules/pages/edit-courier-page/edit-courier-page.component.html
+++ b/src/WebApp/src/app/modules/pages/edit-courier-page/edit-courier-page.component.html
@@ -34,6 +34,6 @@
           </div>
         </div>
         <button routerLink='../../repartidores' class="btn btn-secondary mt-3 mr-3">Cancelar</button>
-        <button value="submit" type="submit" class="btn btn-primary mt-3 mr-3" >Agregar Reapartidor</button>
+        <button value="submit" type="submit" class="btn btn-primary mt-3 mr-3" >Modificar Repartidor</button>
     </form>
 </div>
