Some stetic adjustments

--- a/src/WebApp/src/app/modules/pages/customer-page/customer-page.component.html
+++ b/src/WebApp/src/app/modules/pages/customer-page/customer-page.component.html
@@ -1,8 +1,12 @@
-<h1 class="display-4">Clientes</h1>
-<p class="lead">
-  Clientes registrados y habilitados para realizar pedidos
-  </p>
-<app-customers></app-customers>
-<button type="button" class="btn btn-secondary" routerLink="/clientes/agregar">
-  Agregar Cliente
-</button>
+
+<div class="container mt-5">
+  <h1 class="display-4">Clientes</h1>
+  <p class="lead">
+    Clientes registrados y habilitados para realizar pedidos
+    </p>
+  <app-customers></app-customers>
+  <button type="button" class="btn btn-secondary" routerLink="/clientes/agregar">
+    Agregar Cliente
+  </button>
+  
+</div>
