--- a/src/WebApp/src/app/modules/pages/delivery-managment-page/delivery-managment-page.component.html
+++ b/src/WebApp/src/app/modules/pages/delivery-managment-page/delivery-managment-page.component.html
@@ -1,8 +1,12 @@
-<h1 class="display-4">Administrar entregas</h1>
-<p class="lead">
-    Administra las entregas que realizaran los repartidores
-</p>
-<app-customers></app-customers>
-<button type="button" class="btn btn-secondary" data-toggle="modal" data-target="#exampleModal" routerLink="/clientes/agregar">
-  Agregar Cliente
-</button>
+
+<div class="container mt-5">
+    <h1 class="display-4">Administrar entregas</h1>
+    <p class="lead">
+        Administra las entregas que realizaran los repartidores
+    </p>
+    <app-customers></app-customers>
+    <button type="button" class="btn btn-secondary" data-toggle="modal" data-target="#exampleModal" routerLink="/clientes/agregar">
+      Agregar Cliente
+    </button>
+    
+</div>
