--- a/src/WebApp/src/app/modules/pages/courier-page/courier-page.component.html
+++ b/src/WebApp/src/app/modules/pages/courier-page/courier-page.component.html
@@ -1,14 +1,16 @@
-<h1 class="display-4">Repartidores</h1>
-<p class="lead">
-    Repartidores que dispone la empresa para la entrega de pedidos
-</p>
-<app-couriers></app-couriers>
-
-<button type="button" class="btn btn-secondary" routerLink="/repartidores/agregar">
-    Agregar Repartidor
-</button>
 
 
 
-
+<div class="container mt-5">
+    <h1 class="display-4">Repartidores</h1>
+    <p class="lead">
+        Repartidores que dispone la empresa para la entrega de pedidos
+    </p>
+    <app-couriers></app-couriers>
+    
+    <button type="button" class="btn btn-secondary" routerLink="/repartidores/agregar">
+        Agregar Repartidor
+    </button>
+    
+</div>
 
