--- a/src/WebApp/src/app/modules/pages/home-page/home-page.component.html
+++ b/src/WebApp/src/app/modules/pages/home-page/home-page.component.html
@@ -4,29 +4,40 @@
     <hr class="my-4">
 </div>
 
-<div class="card-group">
-    <div class="card">
-      <img class="card-img-top" src="/assets/images/cliente.jpg"  width="360" height="240" alt="Card image cap">
-      <div class="card-body">
-        <h5 class="card-title">Registra Clientes</h5>
-        <p class="card-text">Registra a los clientes que realizaran pedidos</p>
-        <a routerLink="clientes"><button class="btn btn-primary">Empezar</button></a>
+<div class="container">
+  <div class="row">
+    <div class="col-4">
+        <div class="card">
+        <img class="card-img-top" src="/assets/images/cliente.jpg"  width="320" height="240" alt="Card image cap">
+        <div class="card-body">
+          <h5 class="card-title">Registra Clientes</h5>
+          <p class="card-text">Registra a los clientes que realizaran pedidos</p>
+          <a routerLink="clientes"><button class="btn btn-primary">Empezar</button></a>
+        </div>
       </div>
     </div>
-    <div class="card">
-      <img class="card-img-top" src="/assets/images/delivery-man.jpg" width="360" height="240" alt="Card image cap">
-      <div class="card-body">
-        <h5 class="card-title">Registra Repartidores</h5>
-        <p class="card-text">Registra repartidores que seran los que entregaran los pedidos</p>
-        <a routerLink="repartidores"><button class="btn btn-primary">Empezar</button></a>
+
+    <div class="col-4">
+      <div class="card">
+        <img class="card-img-top" src="/assets/images/delivery-man.jpg" width="320" height="240" alt="Card image cap">
+        <div class="card-body">
+          <h5 class="card-title">Registra Repartidores</h5>
+          <p class="card-text">Registra repartidores que seran los que entregaran los pedidos</p>
+          <a routerLink="repartidores"><button class="btn btn-primary">Empezar</button></a>
+        </div>
       </div>
     </div>
-    <div class="card">
-      <img class="card-img-top" src="/assets/images/managment.jpg" width="360" height="240" alt="Card image cap">
-      <div class="card-body">
-        <h5 class="card-title">Administra pedidos</h5>
-        <p class="card-text">Adminsitra los pedidos de tus clientes</p>
-        <a routerLink="administrar_pedidos"><button class="btn btn-primary">Empezar</button></a>
+
+
+    <div class="col-4">
+      <div class="card">
+        <img class="card-img-top" src="/assets/images/managment.jpg" width="320" height="240" alt="Card image cap">
+        <div class="card-body">
+          <h5 class="card-title">Administra pedidos</h5>
+          <p class="card-text">Agrega y/o elimina los pedidos de tus clientes</p>
+          <a routerLink="administrar_pedidos"><button class="btn btn-primary">Empezar</button></a>
+        </div>
       </div>
     </div>
   </div>
+</div>
