--- a/src/WebApp/src/app/core/header/header.component.html
+++ b/src/WebApp/src/app/core/header/header.component.html
@@ -14,7 +14,7 @@
           <a class="nav-link" routerLink="/repartidores">Repartidores</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/administrar_pedidos">Administrar de Pedidos</a>
+          <a class="nav-link" routerLink="/pedidos">Administrar de Pedidos</a>
         </li>
       </ul>
     </div>
