--- a/src/WebApp/src/app/modules/pages/home-page/home-page.component.html
+++ b/src/WebApp/src/app/modules/pages/home-page/home-page.component.html
@@ -35,7 +35,7 @@
         <div class="card-body">
           <h5 class="card-title">Administra pedidos</h5>
           <p class="card-text">Agrega y/o elimina los pedidos de tus clientes</p>
-          <a routerLink="administrar_pedidos"><button class="btn btn-primary">Empezar</button></a>
+          <a routerLink="pedidos"><button class="btn btn-primary">Empezar</button></a>
         </div>
       </div>
     </div>
