--- a/src/WebApp/src/app/modules/components/orders/orders.component.html
+++ b/src/WebApp/src/app/modules/components/orders/orders.component.html
@@ -2,8 +2,6 @@
     <thead>
       <tr>
         <th scope="col">#</th> 
-        <th scope="col">Informacion del cliente</th>
-        <th scope="col">Informacion del repartidor</th>
         <th scope="col">Pedido</th>
         <th scope="col">Comentarios del pedido</th>
         <th scope="col">Direccion de entrega</th>
@@ -13,8 +11,6 @@
     <tbody>
       <tr *ngFor="let order of orders; index as i">
         <td>{{i+1}}</td>
-        <td>{{order.idCliente}}</td>
-        <td>{{order.idRepartidorAsignado}}</td>
         <td>{{order.itemsPedido}}</td>
         <td>{{order.descripcionPedido}}</td>
         <td>{{order.direccionEntrega}}</td>
@@ -35,6 +31,23 @@
               </svg>
             </button>
           </a>
+
+
+            <button type="button" class="btn btn-warning ml-4"  (click)="onDecline(order.id)">
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil-square" viewBox="0 0 16 16">
+                <path d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456l-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z"/>
+                <path fill-rule="evenodd" d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5v11z"/>
+              </svg>
+            </button>
+
+
+            <button type="button" class="btn btn-success ml-4" (click)="onConfirm(order.id)">
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil-square" viewBox="0 0 16 16">
+                <path d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456l-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z"/>
+                <path fill-rule="evenodd" d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5v11z"/>
+              </svg>
+            </button>
+
        </td>
       </tr>
     </tbody>
