works, working in small details

--- a/src/WebApp/src/app/modules/pages/edit-courier-page/edit-courier-page.component.html
+++ b/src/WebApp/src/app/modules/pages/edit-courier-page/edit-courier-page.component.html
@@ -100,7 +100,7 @@
           </span>
         </div>
       </div>
-      <button routerLink='../../repartidores' class="btn btn-info mt-3 mr-3">Cancelar</button>
+      <button routerLink='../../../repartidores' class="btn btn-info mt-3 mr-3">Cancelar</button>
       <button value="submit" type="submit" class="btn btn-primary mt-3 mr-3" [ngClass]="{'valid-form': courierForm.valid != true}">Agregar Reapartidor</button>
   </form>
 </div>
