--- a/src/WebApp/src/app/modules/pages/edit-customer-page/edit-customer-page.component.html
+++ b/src/WebApp/src/app/modules/pages/edit-customer-page/edit-customer-page.component.html
@@ -18,7 +18,7 @@
           <label for="inputCity">Carnet de Identidad</label>
           <input type="number" class="form-control" id="inputCI" placeholder="numero de carnet de identidad" formControlName="CI">
         </div>
-        <a routerLink='../../clientes' ><button class="btn btn-secondary mt-3 mr-3">Cancelar</button></a>
+        <a routerLink='../../../clientes' ><button class="btn btn-secondary mt-3 mr-3">Cancelar</button></a>
         <button value="submit" type="submit" class="btn btn-primary mt-3 mr-3" >Guardar Cambios</button>
     </form>
 </div>
