probably final commit

--- a/src/WebApp/src/app/modules/components/courier-orders/courier-orders.component.html
+++ b/src/WebApp/src/app/modules/components/courier-orders/courier-orders.component.html
@@ -18,12 +18,8 @@
         <td>{{order.pedidoStatus}}</td> 
         <td>
           <button class="btn btn-warning" (click)="addToQueue(order.id)">
-            <span class="glyphicon glyphicon-road"></span>
+            <span class="glyphicon glyphicon-inbox"></span>
           </button>
-
-        <button type="button" class="btn btn-success ml-4" (click)="onDelivery(order.id)">
-            <span class="glyphicon glyphicon-ok"></span>
-        </button>
 
        </td>
       </tr>
