--- a/src/WebApp/src/app/modules/pages/edit-order-page/edit-order-page.component.html
+++ b/src/WebApp/src/app/modules/pages/edit-order-page/edit-order-page.component.html
@@ -45,10 +45,12 @@
          </span>
         </div>
 
-        <a routerLink='../../pedidos' ><button class="btn btn-info mt-3 mr-3">Cancelar</button></a>
+        <a routerLink='../../../pedidos' ><button class="btn btn-info mt-3 mr-3">Cancelar</button></a>
         <button value="submit" type="submit" class="btn btn-primary mt-3 mr-3" [ngClass]="{'valid-form': orderForm.valid != true}">Agregar cliente</button>
 
     </form>
 </div>
+
+
 
 
